--- a/src/zr.ipynb
+++ b/src/zr.ipynb
@@ -16,27 +16,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "import scipy as sp \n",
     "from sklearn import datasets\n",
-    "from sklearn.model_selection import cross_val_predict, cross_val_score\n",
+    "from sklearn.model_selection import cross_val_predict, cross_val_score, RepeatedStratifiedKFold\n",
     "from sklearn.dummy import DummyClassifier\n",
     "from sklearn.metrics import confusion_matrix, plot_confusion_matrix\n",
+    "from datetime import datetime\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_folds = 10\n",
-    "num_rep = 3"
+    "num_rep = 3\n",
+    "exec_time = datetime.today().strftime('%Y-%m-%d %H:%M:%S')"
    ]
   },
   {
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,11 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "zero_r = DummyClassifier(strategy='stratified')"
+    "zero_r = DummyClassifier()\n",
+    "rskf = RepeatedStratifiedKFold(n_splits = num_folds, n_repeats = num_rep, random_state = 36851234)"
    ]
   },
   {
@@ -90,77 +93,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n"
+     ]
+    }
+   ],
    "source": [
     "predicts = []\n",
     "\n",
     "for i in range(num_rep):\n",
-    "    predicts.append(cross_val_predict(zero_r, wine_x, wine_y, cv=folds))\n"
+    "    predicts.append(cross_val_predict(zero_r, wine_x, wine_y, cv=num_folds))\n",
+    "    \n",
+    "# plt.matshow(conf_matrix, cmap=plt.cm.Blues)\n",
+    "# for i in range(len(conf_matrix)):\n",
+    "#    for j in range(len(conf_matrix)):\n",
+    "#        plt.text(i, j, conf_matrix[i][j], va=\"center\", ha=\"center\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Resultados"
+    "## Resultados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[0.44444444 0.61111111 0.61111111 0.27777778 0.27777778 0.44444444\n",
-      " 0.44444444 0.38888889 0.47058824 0.17647059]\n",
-      "\n",
-      "Matriz de confusão:\n",
-      "[[19 26 14]\n",
-      " [20 29 22]\n",
-      " [14 22 12]]\n",
-      "[0.55555556 0.22222222 0.33333333 0.44444444 0.33333333 0.22222222\n",
-      " 0.33333333 0.22222222 0.41176471 0.41176471]\n",
-      "\n",
-      "Matriz de confusão:\n",
-      "[[17 27 15]\n",
-      " [16 32 23]\n",
-      " [17 16 15]]\n",
-      "[0.33333333 0.22222222 0.38888889 0.5        0.33333333 0.27777778\n",
-      " 0.38888889 0.33333333 0.41176471 0.17647059]\n",
-      "\n",
-      "Matriz de confusão:\n",
-      "[[20 29 10]\n",
-      " [20 35 16]\n",
-      " [ 9 19 20]]\n"
+      "c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n"
      ]
     }
    ],
    "source": [
-    "for i in range(num_rep):\n",
-    "    score = cross_val_score(zero_r, wine_x, wine_y, scoring='accuracy', cv=folds)\n",
-    "    print(score)\n",
-    "    conf_matrix = (confusion_matrix(wine_y, predicts[i]))\n",
-    "    print(\"\\nMatriz de confusão:\")\n",
-    "    print(conf_matrix)\n",
-    "    \n",
-    "    # plt.matshow(conf_matrix, cmap=plt.cm.Blues)\n",
-    "    # for i in range(len(conf_matrix)):\n",
-    "    #    for j in range(len(conf_matrix)):\n",
-    "    #        plt.text(i, j, conf_matrix[i][j], va=\"center\", ha=\"center\")"
+    "score = cross_val_score(zero_r, wine_x, wine_y, scoring='accuracy', cv=rskf)\n",
+    "#print(score)\n",
+    "score_mean = score.mean()\n",
+    "#print(\"Media do classificador\", score_mean)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../results/result_zr.md\", \"w\") as rf:\n",
+    "    print(\"# Zero R\\n\", file=rf)\n",
+    "    print(\"## Configuration\\n\", file=rf)\n",
+    "    print(\"Num of folds: \", num_folds, \"\\n\", file=rf)\n",
+    "    print(\"Num of repetitions: \", num_rep, \"\\n\", file=rf)\n",
+    "    print(\"Test run on: \", exec_time, file=rf)\n",
+    "    print(\"## Results\\n\", file=rf)\n",
+    "    print(\"Mean Value: \", str(score_mean), file=rf)"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   "hash": "12e1f38cb87e37384bc5c23b635ae1d64a3ff37efda71f71566aa42a7a9ed8d2"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.8.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -174,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
