--- a/src/zr.ipynb
+++ b/src/zr.ipynb
@@ -16,12 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "import scipy as sp \n",
+    "from scipy import stats\n",
     "from sklearn import datasets\n",
     "from sklearn.model_selection import cross_val_predict, cross_val_score, RepeatedStratifiedKFold\n",
     "from sklearn.dummy import DummyClassifier\n",
@@ -76,11 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "zero_r = DummyClassifier()\n",
+    "zero_r = DummyClassifier(strategy=\"stratified\")\n",
     "rskf = RepeatedStratifiedKFold(n_splits = num_folds, n_repeats = num_rep, random_state = 36851234)"
    ]
   },
@@ -88,37 +89,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Classificação\n"
+    "### Classificação e obtenção dos resultados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
-      "  warnings.warn(\"The default value of strategy will change from \"\n",
-      "c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
-      "  warnings.warn(\"The default value of strategy will change from \"\n",
-      "c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
-      "  warnings.warn(\"The default value of strategy will change from \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "predicts = []\n",
+    "scores = cross_val_score(zero_r, wine_x, wine_y, scoring='accuracy', cv=rskf)\n",
+    "#print(score)\n",
+    "score_mean = scores.mean()\n",
+    "score_std = scores.std()\n",
+    "score_low, score_upp = stats.norm.interval(0.95, loc=score_mean, scale=score_std/np.sqrt(len(scores)))\n",
     "\n",
-    "for i in range(num_rep):\n",
-    "    predicts.append(cross_val_predict(zero_r, wine_x, wine_y, cv=num_folds))\n",
-    "    \n",
-    "# plt.matshow(conf_matrix, cmap=plt.cm.Blues)\n",
-    "# for i in range(len(conf_matrix)):\n",
-    "#    for j in range(len(conf_matrix)):\n",
-    "#        plt.text(i, j, conf_matrix[i][j], va=\"center\", ha=\"center\")\n"
+    "#print(score_mean, score_std, inf, sup)"
    ]
   },
   {
@@ -130,33 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
-      "  warnings.warn(\"The default value of strategy will change from \"\n",
-      "c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
-      "  warnings.warn(\"The default value of strategy will change from \"\n",
-      "c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
-      "  warnings.warn(\"The default value of strategy will change from \"\n"
-     ]
-    }
-   ],
-   "source": [
-    "score = cross_val_score(zero_r, wine_x, wine_y, scoring='accuracy', cv=rskf)\n",
-    "#print(score)\n",
-    "score_mean = score.mean()\n",
-    "#print(\"Media do classificador\", score_mean)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +127,10 @@
     "    print(\"Num of repetitions: \", num_rep, \"\\n\", file=rf)\n",
     "    print(\"Test run on: \", exec_time, file=rf)\n",
     "    print(\"## Results\\n\", file=rf)\n",
-    "    print(\"Mean Value: \", str(score_mean), file=rf)"
+    "    print(\"Mean Value: \", str(score_mean), \"\\n\", file=rf)\n",
+    "    print(\"Standart Variation: \", str(score_std), \"\\n\", file=rf)\n",
+    "    print(\"Lower limit: \", str(score_low), \"\\n\", file=rf)\n",
+    "    print(\"Upper limit: \", str(score_upp), \"\\n\", file=rf)"
    ]
   }
  ],
