redefinindo execução para unico arquivo (arq individuais mantidos)

--- a/src/individual_classifiers/zr.ipynb
+++ b/src/individual_classifiers/zr.ipynb
@@ -121,16 +121,16 @@
    "outputs": [],
    "source": [
     "with open(\"../results/result_zr.md\", \"w\") as rf:\n",
-    "    print(\"# Zero R\\n\", file=rf)\n",
-    "    print(\"## Configuration\\n\", file=rf)\n",
-    "    print(\"Num of folds: \", num_folds, \"\\n\", file=rf)\n",
-    "    print(\"Num of repetitions: \", num_rep, \"\\n\", file=rf)\n",
-    "    print(\"Test run on: \", exec_time, file=rf)\n",
-    "    print(\"## Results\\n\", file=rf)\n",
-    "    print(\"Mean Value: \", str(score_mean), \"\\n\", file=rf)\n",
-    "    print(\"Standart Variation: \", str(score_std), \"\\n\", file=rf)\n",
-    "    print(\"Lower limit: \", str(score_low), \"\\n\", file=rf)\n",
-    "    print(\"Upper limit: \", str(score_upp), \"\\n\", file=rf)"
+    "    print(\"# Zero R\\n\")\n",
+    "    print(\"## Configuration\\n\")\n",
+    "    print(\"Num of folds: \", num_folds, \"\\n\")\n",
+    "    print(\"Num of repetitions: \", num_rep, \"\\n\")\n",
+    "    print(\"Test run on: \", exec_time)\n",
+    "    print(\"## Results\\n\")\n",
+    "    print(\"Mean Value: \", str(score_mean), \"\\n\")\n",
+    "    print(\"Standart Variation: \", str(score_std), \"\\n\")\n",
+    "    print(\"Lower limit: \", str(score_low), \"\\n\")\n",
+    "    print(\"Upper limit: \", str(score_upp), \"\\n\")"
    ]
   }
  ],
