--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "import scipy as sp \n",
     "from scipy import stats\n",
     "from sklearn import datasets\n",
-    "from sklearn.model_selection import cross_val_predict, cross_val_score, RepeatedStratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_predict, cross_val_score, GridSearchCV, RepeatedStratifiedKFold\n",
     "from sklearn.metrics import confusion_matrix, plot_confusion_matrix\n",
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
      "output_type": "stream",
      "text": [
       "Zero R (mean, std, low, upp): \n",
-      " 0.2968409586056645 0.11210335923545807 0.25672602383864407 0.33695589337268494\n"
+      " 0.3125272331154684 0.10662640790167384 0.27437216419881405 0.3506823020321227\n"
      ]
     }
    ],
@@ -134,13 +134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "knn = KNeighborsClassifier()\n",
+    "knn = KNeighborsClassifier()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_params = {'n_neighbors': [3,5,11,19]}\n",
+    "gs_knn = GridSearchCV(estimator=knn, param_grid = grid_params, scoring='accuracy', cv = num_folds)\n",
     "rskf = RepeatedStratifiedKFold(n_splits = num_folds, n_repeats = num_rep, random_state = 36851234)"
    ]
   },
@@ -153,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -161,12 +171,12 @@
      "output_type": "stream",
      "text": [
       "KNN (mean, std, low, upp): \n",
-      " 0.6974945533769062 0.10891617525307232 0.6585201167931325 0.73646898996068\n"
+      " 0.6956427015250546 0.12091424757836543 0.652374888793219 0.7389105142568901\n"
      ]
     }
    ],
    "source": [
-    "knn_scores = cross_val_score(knn, wine_x, wine_y, scoring='accuracy', cv=rskf)\n",
+    "knn_scores = cross_val_score(gs_knn, wine_x, wine_y, scoring='accuracy', cv=rskf)\n",
     "#print(score)\n",
     "\n",
     "knn_score_mean = knn_scores.mean()\n",
@@ -192,25 +202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'decisiontree' from 'sklearn.tree' (c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\tree\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-3ea760933789>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtree\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdecisiontree\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdecisiontree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mrskf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRepeatedStratifiedKFold\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_splits\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnum_folds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_repeats\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnum_rep\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m36851234\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'decisiontree' from 'sklearn.tree' (c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\tree\\__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.tree import decisiontree\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "dt = decisiontree()\n",
+    "dt = DecisionTreeClassifier()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grade={'max_depth': [3,5,10]}\n",
+    "gs_dt = GridSearchCV(estimator=dt, param_grid = grade, scoring='accuracy', cv = num_folds)\n",
     "rskf = RepeatedStratifiedKFold(n_splits = num_folds, n_repeats = num_rep, random_state = 36851234)"
    ]
   },
@@ -223,20 +231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNN (mean, std, low, upp): \n",
-      " 0.6974945533769062 0.10891617525307232 0.6585201167931325 0.73646898996068\n"
+      "dt (mean, std, low, upp): \n",
+      " 0.902941176470588 0.06555064635152377 0.8794846099567839 0.9263977429843921\n"
      ]
     }
    ],
    "source": [
-    "dt_scores = cross_val_score(dt, wine_x, wine_y, scoring='accuracy', cv=rskf)\n",
+    "dt_scores = cross_val_score(gs_dt, wine_x, wine_y, scoring='accuracy', cv=rskf)\n",
     "#print(score)\n",
     "\n",
     "dt_score_mean = dt_scores.mean()\n",
@@ -250,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NBG"
+    "## NAIVE BAYES GAUSSIAN"
    ]
   },
   {
@@ -262,30 +270,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'decisiontree' from 'sklearn.tree' (c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\tree\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)\n",
-      "\u001b[1;32m<ipython-input-21-3ea760933789>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
-      "\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtree\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdecisiontree\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m      3\u001b[0m \u001b[0mdt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdecisiontree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m      4\u001b[0m \u001b[0mrskf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRepeatedStratifiedKFold\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_splits\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnum_folds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_repeats\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnum_rep\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m36851234\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'decisiontree' from 'sklearn.tree' (c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\tree\\__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.tree import nbg\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
     "\n",
-    "nbg = nbg()\n",
+    "nbg = GaussianNB()\n",
     "rskf = RepeatedStratifiedKFold(n_splits = num_folds, n_repeats = num_rep, random_state = 36851234)"
    ]
   },
@@ -298,15 +289,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNN (mean, std, low, upp): \n",
-      " 0.6974945533769062 0.10891617525307232 0.6585201167931325 0.73646898996068\n"
+      "nbg (mean, std, low, upp): \n",
+      " 0.9734204793028323 0.0482047991331875 0.9561709304412 0.9906700281644645\n"
      ]
     }
    ],
@@ -337,23 +328,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "ename": "ImportError",
-     "evalue": "cannot import name 'decisiontree' from 'sklearn.tree' (c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\tree\\__init__.py)",
+     "evalue": "cannot import name 'newclassifier' from 'sklearn' (c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\__init__.py)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)\n",
-      "\u001b[1;32m<ipython-input-21-3ea760933789>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
-      "\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtree\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdecisiontree\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m      3\u001b[0m \u001b[0mdt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdecisiontree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m      4\u001b[0m \u001b[0mrskf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRepeatedStratifiedKFold\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_splits\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnum_folds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_repeats\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnum_rep\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m36851234\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'decisiontree' from 'sklearn.tree' (c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\tree\\__init__.py)"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-33-0c889649d74b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# CREATE CLASSIFIER\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnewclassifier\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mkmc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnewclassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mrskf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRepeatedStratifiedKFold\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_splits\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnum_folds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_repeats\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnum_rep\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m36851234\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'newclassifier' from 'sklearn' (c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\__init__.py)"
      ]
     }
    ],
@@ -381,8 +367,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNN (mean, std, low, upp): \n",
-      " 0.6974945533769062 0.10891617525307232 0.6585201167931325 0.73646898996068\n"
+      "kmc (mean, std, low, upp): \n",
+      " 0.9029411764705881 0.07098427389811961 0.877540247039682 0.9283421059014942\n"
      ]
     }
    ],
@@ -394,7 +380,7 @@
     "kmc_score_std = kmc_scores.std()\n",
     "kmc_score_low, kmc_score_upp = stats.norm.interval(0.95, loc=kmc_score_mean, scale=kmc_score_std/np.sqrt(len(kmc_scores)))\n",
     "\n",
-    "print(\"dt (mean, std, low, upp): \\n\",kmc_score_mean, kmc_score_std, kmc_score_low, kmc_score_upp)"
+    "print(\"kmc (mean, std, low, upp): \\n\",kmc_score_mean, kmc_score_std, kmc_score_low, kmc_score_upp)"
    ]
   },
   {
@@ -413,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,17 +423,17 @@
     "    print(\"Lower limit: \", str(knn_score_low), \"\\n\", file=rf)\n",
     "    print(\"Upper limit: \", str(knn_score_upp), \"\\n\", file=rf)\n",
     "\n",
-    "    # print(\"## DECISION TREE\\n\", file=rf)\n",
-    "    # print(\"Mean Value: \", str(dt_score_mean), \"\\n\", file=rf)\n",
-    "    # print(\"Standart Variation: \", str(dt_score_std), \"\\n\", file=rf)\n",
-    "    # print(\"Lower limit: \", str(dt_score_low), \"\\n\", file=rf)\n",
-    "    # print(\"Upper limit: \", str(dt_score_upp), \"\\n\", file=rf)\n",
+    "    print(\"## DECISION TREE\\n\", file=rf)\n",
+    "    print(\"Mean Value: \", str(dt_score_mean), \"\\n\", file=rf)\n",
+    "    print(\"Standart Variation: \", str(dt_score_std), \"\\n\", file=rf)\n",
+    "    print(\"Lower limit: \", str(dt_score_low), \"\\n\", file=rf)\n",
+    "    print(\"Upper limit: \", str(dt_score_upp), \"\\n\", file=rf)\n",
     "\n",
-    "    # print(\"## NBG\\n\", file=rf)\n",
-    "    # print(\"Mean Value: \", str(nbg_score_mean), \"\\n\", file=rf)\n",
-    "    # print(\"Standart Variation: \", str(nbg_score_std), \"\\n\", file=rf)\n",
-    "    # print(\"Lower limit: \", str(nbg_score_low), \"\\n\", file=rf)\n",
-    "    # print(\"Upper limit: \", str(nbg_score_upp), \"\\n\", file=rf)\n",
+    "    print(\"## NBG\\n\", file=rf)\n",
+    "    print(\"Mean Value: \", str(nbg_score_mean), \"\\n\", file=rf)\n",
+    "    print(\"Standart Variation: \", str(nbg_score_std), \"\\n\", file=rf)\n",
+    "    print(\"Lower limit: \", str(nbg_score_low), \"\\n\", file=rf)\n",
+    "    print(\"Upper limit: \", str(nbg_score_upp), \"\\n\", file=rf)\n",
     "\n",
     "    # print(\"## KMC\\n\", file=rf)\n",
     "    # print(\"Mean Value: \", str(kmc_score_mean), \"\\n\", file=rf)\n",
