--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
      "output_type": "stream",
      "text": [
       "Zero R (mean, std, low, upp): \n",
-      " 0.3125272331154684 0.10662640790167384 0.27437216419881405 0.3506823020321227\n"
+      " 0.3218954248366013 0.12526688441318043 0.27707006963784997 0.3667207800353526\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
      "output_type": "stream",
      "text": [
       "dt (mean, std, low, upp): \n",
-      " 0.902941176470588 0.06555064635152377 0.8794846099567839 0.9263977429843921\n"
+      " 0.9065359477124182 0.06336611700427768 0.8838610906215882 0.9292108048032481\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -328,27 +328,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'newclassifier' from 'sklearn' (c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-33-0c889649d74b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# CREATE CLASSIFIER\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnewclassifier\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mkmc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnewclassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mrskf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRepeatedStratifiedKFold\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_splits\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnum_folds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_repeats\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnum_rep\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m36851234\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'newclassifier' from 'sklearn' (c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\sklearn\\__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# CREATE CLASSIFIER\n",
-    "from sklearn import newclassifier\n",
+    "# # CREATE CLASSIFIER\n",
+    "# from sklearn import newclassifier\n",
     "\n",
-    "kmc = newclassifier()\n",
-    "rskf = RepeatedStratifiedKFold(n_splits = num_folds, n_repeats = num_rep, random_state = 36851234)"
+    "# kmc = newclassifier()\n",
+    "# rskf = RepeatedStratifiedKFold(n_splits = num_folds, n_repeats = num_rep, random_state = 36851234)"
    ]
   },
   {
@@ -360,27 +348,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "kmc (mean, std, low, upp): \n",
-      " 0.9029411764705881 0.07098427389811961 0.877540247039682 0.9283421059014942\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "kmc_scores = cross_val_score(dt, wine_x, wine_y, scoring='accuracy', cv=rskf)\n",
-    "#print(score)\n",
+    "# kmc_scores = cross_val_score(dt, wine_x, wine_y, scoring='accuracy', cv=rskf)\n",
+    "# #print(score)\n",
     "\n",
-    "kmc_score_mean = kmc_scores.mean()\n",
-    "kmc_score_std = kmc_scores.std()\n",
-    "kmc_score_low, kmc_score_upp = stats.norm.interval(0.95, loc=kmc_score_mean, scale=kmc_score_std/np.sqrt(len(kmc_scores)))\n",
+    "# kmc_score_mean = kmc_scores.mean()\n",
+    "# kmc_score_std = kmc_scores.std()\n",
+    "# kmc_score_low, kmc_score_upp = stats.norm.interval(0.95, loc=kmc_score_mean, scale=kmc_score_std/np.sqrt(len(kmc_scores)))\n",
     "\n",
-    "print(\"kmc (mean, std, low, upp): \\n\",kmc_score_mean, kmc_score_std, kmc_score_low, kmc_score_upp)"
+    "# print(\"kmc (mean, std, low, upp): \\n\",kmc_score_mean, kmc_score_std, kmc_score_low, kmc_score_upp)"
    ]
   },
   {
@@ -399,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
