--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -24,8 +24,7 @@
     "import scipy as sp \n",
     "from scipy import stats\n",
     "from sklearn import datasets\n",
-    "from sklearn.model_selection import cross_val_predict, cross_val_score, GridSearchCV, StratifiedKFold, RepeatedStratifiedKFold\n",
-    "from sklearn.metrics import confusion_matrix, plot_confusion_matrix\n",
+    "from sklearn.model_selection import cross_val_score, GridSearchCV, StratifiedKFold, RepeatedStratifiedKFold\n",
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -41,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_folds = 10\n",
+    "num_splits = 10\n",
     "num_rep = 3\n",
     "exec_time = datetime.today().strftime('%Y-%m-%d %H:%M:%S')"
    ]
@@ -52,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rskf = RepeatedStratifiedKFold(n_splits = num_folds, n_repeats = num_rep, random_state = 36851234)\n",
+    "rskf = RepeatedStratifiedKFold(n_splits = num_splits, n_repeats = num_rep, random_state = 36851234)\n",
     "skf = StratifiedKFold(n_splits=4)"
    ]
   },
@@ -511,7 +510,7 @@
     "with open(\"../results/results.md\", \"w\") as rf: #opening result file\n",
     "    print(\"# Results Obtained\", file=rf)\n",
     "    print(\"## Configuration\\n\", file=rf)\n",
-    "    print(\"Num of folds: \", num_folds, \"\\n\", file=rf)\n",
+    "    print(\"Num of folds: \", num_splits, \"\\n\", file=rf)\n",
     "    print(\"Num of repetitions: \", num_rep, \"\\n\", file=rf)\n",
     "    print(\"Test run on: \", exec_time, file=rf)\n",
     "    \n",
